# ASI_projekt_koncowy

./: .gitignore  README.md  azure-pipelines.yml
.dvc/: .gitignore  config  setup_dvc.py
.github/workflow/: docker-build-push.yml
.github/workflows/: deploy-main-aci.yml  docker-build-push.yml
ASI_projekt_koncowy/asi-project/.azure-pipelines/: build-pipeline.yml
asi-project/: .gitignore  .pre-commit-config.yaml  AutogluonModels.dvc  Dockerfile  Dockerfile.azure  README.md  azure-pipelines.yml  dokumentacja.html  pyproject.toml  requirements.in  requirements.txt  stats.json
asi-project/.azure-pipelines/: build-pipeline.yml
asi-project/AutogluonModels/ag-20250528_134808/: assets.json  config.yaml  data_processors.pkl  df_preprocessor.pkl  events.out.tfevents.1748440089.mbp-przemek.home.67459.0  hparams.yaml
asi-project/AutogluonModels/ag-20250528_150925/: best_k_models.yaml  events.out.tfevents.1748444966.mbp-przemek.home.68886.0
asi-project/conf/base/: catalog.yml  parameters.yml  parameters_data_engineering.yml  parameters_data_science.yml
asi-project/data/: .gitignore  01_raw.dvc  02_intermediate.dvc  03_primary.dvc  05_model_input.dvc  06_models.dvc  09_autogluon_internal_models_pokemon.dvc
asi-project/data/08_reporting/classification_report.json/2025-05-28T20.31.52.644Z/: classification_report.json
asi-project/data/08_reporting/classification_report.json/2025-06-14T19.07.17.601Z/: classification_report.json
asi-project/docs/source/: conf.py
asi-project/src/asi_project/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
asi-project/src/asi_project/pipelines/data_engineering/: __init__.py  nodes.py  pipeline.py
asi-project/src/asi_project/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
asi-project/streamlit_app/: README.md  app.py
asi-project/tests/pipelines/data_engineering/: test_pipeline.py
asi-project/tests/pipelines/data_prepartion/: test_pipeline.py
asi-project/tests/pipelines/data_science/: test_pipeline.py
